2012-12-15 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/exceptions.h: added exception_to_r_condition
        * exceptions.cpp: new implementation of forward_exception_to_r that 
        directly calls stop rather than a function in Rcpp
        
2012-12-14 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/clamp.h: clamp was pretty wrong
        * unitTests/runit.sugar.R: new unit test for clamp
        * unitTests/cpp/sugar.cpp: new unit test for clamp

2012-12-12  JJ Allaire <jj@rstudio.org>

        * src/Attributes.R: always generate new dynlib file for rebuild=TRUE
        * src/attributes.cpp: set svn:eol-style to native; always generate 
        new dynlib file for rebuild=TRUE; don't declare attributes constant
        strings extern

2012-12-12 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Symbol.h: c_str becomes const and added Symbol::operator==(const char* )

2012-12-11  JJ Allaire <jj@rstudio.org>
      
        * R/Attributes.R: always print output when shared library is not created
        * src/attributes.cpp: consolidate attributes into single file
        * src/Attributes.cpp: consolidate attributes into single file
        * src/AttributesGen.h: consolidate attributes into single file
        * src/AttributesGen.cpp: consolidate attributes into single file
        * src/AttributesParser.h: consolidate attributes into single file
        * src/AttributesParser.cpp: consolidate attributes into single file
        * src/AttributesTypes.h: consolidate attributes into single file
        * src/AttributesUtil.h: consolidate attributes into single file
        * inst/NEWS.Rd: additional notes on changes to attributes
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: update for changes 
        to attributes in 0.10.2

2012-12-11 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/String.h: missing operator +=( const StringProxy& )